Update job objective, contact info, and publications

--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
     <div class="container">
         <header>
             <h1>Shuaiqi Wang</h1>
-            <p>Job Objective: Control Algorithm / Embedded System / Software Development / Mechanical Design</p>
+            <p>Job Objective: Machine Learning / Control Algorithm / Embedded System / Software Development</p>
             <div class="contact-info">
-                <p>Phone: +86 155 0132 5588 | Email: sage-wang@foxmail.com</p>
+                <p>Phone: +86 155 0132 5588 | Email: wsq@outlook.cl</p>
                 <p>Preferred Cities: Beijing / Shanghai / Suzhou / Kunshan</p>
             </div>
         </header>
@@ -73,9 +73,9 @@
         <section>
             <h2>Education</h2>
             <ul>
-                <li>Bachelor of Mechanical and Electronic Engineering, Harbin Institute of Technology (2020.9 - 2024.6)</li>
-                <li>Master of Electronic Information (Control), Zhejiang University (2024.9 - 2027.6)</li>
-                <li>English Proficiency: CET4 481, CET6 473</li>
+                <li>Bachelor of Mechanical and Electronic Engineering, <strong>Harbin Institute of Technology</strong> (2020.9 - 2024.6)</li>
+                <li>Master of Electronic Information (Control), <strong>Zhejiang University</strong> (2024.9 - 2027.6)</li>
+                <li>English Proficiency: CET4 481, CET6 494</li>
                 <li>Major Courses: Electronics, Theoretical Mechanics, Material Mechanics, Mechanical Principles, Mechanical Design, Electromechanical Control Systems, etc.</li>
             </ul>
         </section>
@@ -91,6 +91,16 @@
                 </li>
                 <li><strong>Intelligent Transport Vehicle Based on Machine Vision</strong> (2022.12 - 2023.8)
                     <p>Responsible for chassis control, achieving motor CAN communication, dual-loop control, and multi-task processing.</p>
+                </li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Publications</h2>
+            <ul>
+                <li>李静, <strong>王帅淇</strong>, 刘维华, 等. 基于储层计算的多场站充电负荷分布式预测方法和系统: CN120654971A[P]. 2025-09-16.(CN Patent)
+                </li>
+                <li> LI J, <strong>WANG S Q</strong>, LIU W H, et al. Distributed PV Power Prediction with Sampling-Noise Awareness: An Anti-Outlier Robust ESN Approach[J]. IET Renewable Power Generation, 2025.(Under review)
                 </li>
             </ul>
         </section>
@@ -137,7 +147,7 @@
         </section>
 
         <footer class="footer">
-            <p>&copy; 2024 Shuaiqi Wang. All rights reserved.</p>
+            <p>&copy; 2025 Shuaiqi Wang. All rights reserved.</p>
         </footer>
     </div>
 
