Update title and publication details in index.html

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Academic CV - Shuaiqi Wang</title>
+    <title>Shuaiqi Wang</title>
     <style>
         body {
-            font-family: "Helvetica Neue", Arial, sans-serif;
+            font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
             background-color: #f5f5f5;
             color: #333;
             line-height: 1.6;
@@ -98,9 +98,13 @@
         <section>
             <h2>Publications</h2>
             <ul>
+                <li> <strong>WANG S Q</strong>, ZHANG Y A, KE S Y, et al. Distributed uniform-noise-robust echo state networks for time-series forecasting[J]. <em>Science China Information Sciences</em>, 2026.(Under review)
+                </li>
+                <li> ZHANG Y A, <strong>WANG S Q</strong>, KE S Y, et al. Uniform-Noise-Robust Broad Learning System and Its Distributed Architecture[J]. <em>Knowledge-Based Systems</em>, 2026.(Under review)
+                </li>
                 <li>李静, <strong>王帅淇</strong>, 刘维华, 等. 基于储层计算的多场站充电负荷分布式预测方法和系统: CN120654971A[P]. 2025-09-16.(CN Patent)
                 </li>
-                <li> LI J, <strong>WANG S Q</strong>, LIU W H, et al. Distributed PV Power Prediction with Sampling-Noise Awareness: An Anti-Outlier Robust ESN Approach[J]. IET Renewable Power Generation, 2025.(Under review)
+                <li> LI J, <strong>WANG S Q</strong>, LIU W H, et al. Distributed PV Power Prediction with Sampling-Noise Awareness: An Anti-Outlier Robust ESN Approach[J]. <em>IET Renewable Power Generation</em>, 2025.(Under review)
                 </li>
             </ul>
         </section>
@@ -147,7 +151,7 @@
         </section>
 
         <footer class="footer">
-            <p>&copy; 2025 Shuaiqi Wang. All rights reserved.</p>
+            <p>&copy; 2026 Shuaiqi Wang. All rights reserved.</p>
         </footer>
     </div>
 
